@@ -18,6 +18,12 @@
  ****************************************************************/
 package org.apache.cayenne.query;
 
+import java.sql.Statement;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.List;
+
 import org.apache.cayenne.CayenneRuntimeException;
 import org.apache.cayenne.DataRow;
 import org.apache.cayenne.ObjectContext;
@@ -29,12 +35,6 @@ import org.apache.cayenne.exp.ExpressionFactory;
 import org.apache.cayenne.map.DbEntity;
 import org.apache.cayenne.map.EntityResolver;
 import org.apache.cayenne.map.ObjEntity;
-
-import java.sql.Statement;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
 
 /**
  * A selecting query providing chainable API. Can be viewed as an alternative to
@@ -231,23 +231,25 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 	}
 
 	/**
-	 * Initializes or resets a qualifier expression of this query.
+	 * Appends a qualifier expression of this query. An equivalent to
+	 * {@link #and(Expression...)} that can be used a syntactic sugar.
 	 * 
 	 * @return this object
 	 */
 	public ObjectSelect<T> where(Expression expression) {
-		this.where = expression;
+		and(expression);
 		return this;
 	}
 
 	/**
-	 * Initializes or resets a qualifier expression of this query, using
-	 * provided expression String and an array of position parameters.
+	 * Appends a qualifier expression of this query, using provided expression
+	 * String and an array of position parameters. This is an equivalent to
+	 * calling "and".
 	 * 
 	 * @return this object
 	 */
 	public ObjectSelect<T> where(String expressionString, Object... parameters) {
-		this.where = ExpressionFactory.exp(expressionString, parameters);
+		and(ExpressionFactory.exp(expressionString, parameters));
 		return this;
 	}
 
@@ -347,59 +349,11 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 	}
 
 	/**
-	 * Initializes or resets a list of orderings of this query.
+	 * Adds a list of orderings of this query.
 	 * 
 	 * @return this object
 	 */
 	public ObjectSelect<T> orderBy(Ordering... orderings) {
-
-		if (this.orderings != null) {
-			this.orderings.clear();
-		}
-
-		return addOrderBy(orderings);
-	}
-
-	/**
-	 * Initializes or resets a list of orderings of this query.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> orderBy(Collection<Ordering> orderings) {
-
-		if (this.orderings != null) {
-			this.orderings.clear();
-		}
-
-		return addOrderBy(orderings);
-	}
-
-	/**
-	 * Adds a single ascending ordering on a given property to the existing
-	 * ordering clause of this query.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> addOrderBy(String property) {
-		return addOrderBy(new Ordering(property));
-	}
-
-	/**
-	 * Adds a single ordering on a given property to the existing ordering
-	 * clause of this query.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> addOrderBy(String property, SortOrder sortOrder) {
-		return addOrderBy(new Ordering(property, sortOrder));
-	}
-
-	/**
-	 * Adds new orderings to the list of the existing orderings.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> addOrderBy(Ordering... orderings) {
 
 		if (orderings == null || orderings == null) {
 			return this;
@@ -417,11 +371,11 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 	}
 
 	/**
-	 * Adds new orderings to the list of orderings.
+	 * Adds a list of orderings of this query.
 	 * 
 	 * @return this object
 	 */
-	public ObjectSelect<T> addOrderBy(Collection<Ordering> orderings) {
+	public ObjectSelect<T> orderBy(Collection<Ordering> orderings) {
 
 		if (orderings == null || orderings == null) {
 			return this;
@@ -437,32 +391,11 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 	}
 
 	/**
-	 * Resets internal prefetches to the new value, which is a single prefetch
-	 * with specified semantics.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> prefetch(String path, int semantics) {
-		this.prefetches = PrefetchTreeNode.withPath(path, semantics);
-		return this;
-	}
-
-	/**
-	 * Resets internal prefetches to the new value.
-	 * 
-	 * @return this object
-	 */
-	public ObjectSelect<T> prefetch(PrefetchTreeNode prefetch) {
-		this.prefetches = prefetch;
-		return this;
-	}
-
-	/**
 	 * Merges prefetch into the query prefetch tree.
 	 * 
 	 * @return this object
 	 */
-	public ObjectSelect<T> addPrefetch(PrefetchTreeNode prefetch) {
+	public ObjectSelect<T> prefetch(PrefetchTreeNode prefetch) {
 
 		if (prefetch == null) {
 			return this;
@@ -482,7 +415,7 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 	 * 
 	 * @return this object
 	 */
-	public ObjectSelect<T> addPrefetch(String path, int semantics) {
+	public ObjectSelect<T> prefetch(String path, int semantics) {
 
 		if (path == null) {
 			return this;
@@ -600,7 +533,7 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 		return cacheStrategy(QueryCacheStrategy.SHARED_CACHE, cacheGroups);
 	}
 
-    public String[] getCacheGroups() {
+	public String[] getCacheGroups() {
 		return cacheGroups;
 	}
 
@@ -655,33 +588,33 @@ public class ObjectSelect<T> extends IndirectQuery implements Select<T> {
 		return prefetches;
 	}
 
-    @Override
-    public List<T> select(ObjectContext context) {
+	@Override
+	public List<T> select(ObjectContext context) {
 		return context.select(this);
 	}
 
-    @Override
-    public T selectOne(ObjectContext context) {
+	@Override
+	public T selectOne(ObjectContext context) {
 		return context.selectOne(this);
 	}
 
-    @Override
-    public T selectFirst(ObjectContext context) {
-        return context.selectFirst(limit(1));
-    }
+	@Override
+	public T selectFirst(ObjectContext context) {
+		return context.selectFirst(limit(1));
+	}
 
-    @Override
-    public void iterate(ObjectContext context, ResultIteratorCallback<T> callback) {
-        context.iterate((Select<T>) this, callback);
-    }
+	@Override
+	public void iterate(ObjectContext context, ResultIteratorCallback<T> callback) {
+		context.iterate((Select<T>) this, callback);
+	}
 
-    @Override
-    public ResultIterator<T> iterator(ObjectContext context) {
-        return context.iterator(this);
-    }
+	@Override
+	public ResultIterator<T> iterator(ObjectContext context) {
+		return context.iterator(this);
+	}
 
-    @Override
-    public ResultBatchIterator<T> batchIterator(ObjectContext context, int size) {
-        return context.batchIterator(this, size);
-    }
+	@Override
+	public ResultBatchIterator<T> batchIterator(ObjectContext context, int size) {
+		return context.batchIterator(this, size);
+	}
 }
