@@ -25,6 +25,7 @@ CAY-2008 Connection pool refactoring and validation query support in Cayenne Dat
 CAY-2009 Non-blocking connection pool
 CAY-2010 Splitting DataSourceBuilder from ServerRuntimeBuilder
 CAY-2011 Support for Java 8 date and time types
+CAY-2012 ObjectSelect, SelectById: eliminating methods that reset query state
 
 Bug Fixes:
 
